--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,15 +13,19 @@
   "dependencies": {
     "@babel/core": "7.13.10",
     "@babel/preset-env": "7.13.12",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^3.7.4"
+    "mongodb": "^3.7.4",
+    "react": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@babel/node": "^7.23.9",
+    "@babel/preset-react": "^7.24.1",
     "nodemon": "^3.1.0"
   }
 }
